# cricket

./: .gitignore  Dockerfile  README.md  convert_file.py  hello.py  predictions.csv  pyproject.toml  run_cricket.sh
report/: ireland_first_5_overs.csv  predictions.csv  q3a.csv  report.ipynb
src/: config.py  convert_file.py  extract.py  load.py  main.py  model.py  predict.py  staging.py  train_model.py  transform.py
tests/: test_demo.py  test_load.py  test_predict.py  test_staging.py  test_train_model.py  test_transform.py
tests/data/: test_data.csv
