[project]
name = "cricket"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1.3",
    "joblib>=1.4.2",
    "polars>=1.17.1",
    "ruff>=0.8.3",
    "scikit-learn>=1.6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.uv.scripts]
predict = "python src/predict.py --data report/ireland_first_5_overs.csv --model models/model.pkl --output predictions.csv"
